fixed blog page & single blog page + blog api

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.19",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
